<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/labelBackground"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/labelColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:paddingBottom="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/labelBackground"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/plotSynopsisTitle"
                android:textColor="@color/labelColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/labelColor"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/title_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/labelBackground"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/favoriteTitle"
                android:textColor="@color/labelColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/iv_toggle"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:contentDescription="@string/favoriteTitle"
                android:src="@drawable/selector_toggle_button" />

            <TextView
                android:id="@+id/voting_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/votingAverageBackground"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RatingBar
                android:id="@+id/rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:isIndicator="true"
                android:numStars="5"
                tools:rating="2.5" />

            <TextView
                android:id="@+id/trailerUrls_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/title_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/labelBackground"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/trailersTitle"
                android:textColor="@color/labelColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/title_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/labelBackground"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/reviewsTitle"
                android:textColor="@color/labelColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>